<resources>
    <string name="app_name">Banha</string>
    <string name="ar_menu">Arabic</string>
    <string name="en_menu">English</string>
    <string name="search_menu">Search</string>
    <string name="itemName">Name</string>
    <string name="itemDiscription">discription</string>
    <string name="title_activity_navigate">navigate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="share">Share</string>
    <string name="contact">Contact Us</string>
</resources>