<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/ar"
        android:icon="@drawable/ar_photopng"
        android:title="@string/ar_menu"></item>
    <item android:id="@+id/en"
        android:icon="@drawable/en_photo"
        android:title="@string/en_menu"></item>

    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        android:icon="@drawable/ic_baseline_contact_support_24"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/search"
         app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search_menu"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="android.widget.SearchView"></item>
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="always"></item>
</menu>